@@ -2471,29 +2471,39 @@ a.post-edit-link {
 /* Site info */
 
 .site-info {
-  font-size: 14px;
-  font-size: 0.875rem;
-  margin-bottom: 1em;
-}
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0, 0.25);
 
-.site-info a {
-  color: #666;
-}
+  a {
+    color: white;
+  }
 
-.site-info .sep {
-  margin: 0;
-  display: block;
-  visibility: hidden;
-  height: 0;
-  width: 100%;
-}
+  ul {
+    list-style-type: none;
+    margin: 0;
+  }
 
-.site-info span[role=separator] {
-  padding: 0 0.2em 0 0.4em;
-}
+  span[role=separator] {
+    padding: 0 0.2em 0 0.4em;
+  }
 
-.site-info span[role=separator]::before {
-  content: '\002f';
+  span[role=separator]::before {
+    content: '\002f';
+  }
+
+  .menu-footer-tos-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .wrap {
+    height: 100%;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -4191,23 +4201,7 @@ p > object:only-child {
     width: 36%;
   }
 
-  .site-info {
-    float: left;
-    padding: 0.7em 0 0;
-    width: 58%;
-  }
 
-  .social-navigation + .site-info {
-    margin-left: 6%;
-  }
-
-  .site-info .sep {
-    margin: 0 0.5em;
-    display: inline;
-    visibility: visible;
-    height: auto;
-    width: auto;
-  }
 
   /* Gallery Columns */
 
@@ -4334,8 +4328,7 @@ p > object:only-child {
   .comment-reply-link,
   .comment-metadata .edit-link,
   .pingback .edit-link,
-  .site-footer aside.widget-area,
-  .site-info {
+  .site-footer aside.widget-area {
     display: none !important;
   }
 
