@@ -1,19 +1,7 @@
-<?php
+<?
 /**
  * The template for displaying all pages
- *
- * This is the template that displays all pages by default.
- * Please note that this is the WordPress construct of pages
- * and that other 'pages' on your WordPress site may use a
- * different template.
- *
- * @link https://codex.wordpress.org/Template_Hierarchy
- *
- * @package WordPress
- * @subpackage Twenty_Seventeen
- * @since 1.0
- * @version 1.0
- */
+**/
 
 get_header(); ?>
 
@@ -33,12 +21,12 @@ get_header(); ?>
 				// 	comments_template();
 				// endif;
 
-			endwhile; // End of the loop.
+			endwhile;
 			?>
 
-		</main><!-- #main -->
-	</div><!-- #primary -->
-</div><!-- .wrap -->
+		</main>
+	</div>
+</div>
 
-<?php
+<?
 get_footer();
