@@ -2,6 +2,6 @@
 /*
  * Theme Name: piousbox_wp_theme
  * Text Domain: twentyseventeen
- * Version: 1.6.1
+ * Version: 1.6.2
  *
 **/
