@@ -1,9 +1,6 @@
-<?php
-if ( is_active_sidebar( 'sidebar-2' ) ||
-	is_active_sidebar( 'sidebar-3' ) ) :
-?>
 
-	<aside class="widget-area" role="complementary" aria-label="<?php esc_attr_e( 'Footer', 'twentyseventeen' ); ?>">
+<? if ( is_active_sidebar( 'sidebar-2' ) || is_active_sidebar( 'sidebar-3' ) ) : ?>
+	<aside class="widget-area" role="complementary" aria-label="<?php esc_attr_e('Footer'); ?>">
 		<?php if ( is_active_sidebar( 'sidebar-2' ) ) { ?>
 			<div class="widget-column footer-widget-1">
 				<?php dynamic_sidebar( 'sidebar-2' ); ?>
@@ -13,6 +10,6 @@ if ( is_active_sidebar( 'sidebar-2' ) ||
 				<?php dynamic_sidebar( 'sidebar-3' ); ?>
 			</div>
 		<?php } ?>
-	</aside><!-- .widget-area -->
+	</aside>
+<? endif; ?>
 
-<?php endif; ?>
