@@ -6,7 +6,7 @@
  * @subpackage Twenty_Seventeen
  * @since 1.0
  * @version 1.0
- */
+**/
 
 ?>
 <div class="custom-header">
